# ai-adam

./: .env.example  .gitignore  QWEN.md  README.md  config.example.toml  config.toml  pyproject.toml  pytest.ini  requirements.txt  test_commands.py
src/: __init__.py  main.py
src/cogs/: memory.py  personality.py  reactions.py
src/database/: __init__.py  manager.py
src/personalities/: __init__.py  base_guidelines.toml  default.toml  karen.toml  memer.toml  noughties_memer.toml  reddit_mod.toml  tech_expert.toml  tifa_lockhart.toml
src/utils/: ai_response_validator.py  emoji_analyzer.py  emoji_formatter.py  emoji_helper.py  emoji_manager.py  emoji_parser.py  personalities.py
tests/: conftest.py  test_ai_interaction.py  test_emoji_analyzer.py  test_emoji_analyzer_integration.py  test_emoji_caching.py  test_emoji_helper.py  test_fact_extraction.py  test_imports.py  test_interaction_history.py  test_memory_cog.py  test_memory_learning.py  test_personalities.py  test_personality_cog.py  test_personality_comprehensive.py  test_personality_fix.py  test_personality_integration.py  test_personality_switching.py  test_reactions.py  test_reactions_comprehensive.py
tests/e2e/: test_comprehensive_integration.py
tests/integration/: test_ai_interaction.py  test_emoji_analyzer_integration.py  test_emoji_system.py  test_llm_emoji_selection.py  test_main.py  test_memory_cog.py  test_personality_fix.py  test_personality_integration.py  test_reaction_integration.py  test_server_personality_db.py
tests/unit/: test_ai_response_validator.py  test_config.py  test_database_manager.py  test_emoji_helper.py  test_emoji_parser.py  test_fact_extraction.py  test_imports.py  test_memory_learning.py  test_personality_cog.py
