[tool.poetry]
name = "ai-adam"
version = "0.1.0"
description = "A Discord bot with AI chat capabilities and learning features."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
py-cord = "2.6.1"
litellm = "1.74.15"
python-dotenv = "1.0.1"
aiosqlite = "0.20.0"
requests = "2.32.3"
pytest = "8.3.2"
pytest-asyncio = "0.23.7"
audioop-lts = "0.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
extend-select = [
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
